# CuteCom

./: .gitignore  CMakeLists.txt  Changelog  README  TODO  cutecom.pro  cutecommdlg.ui  qcppdialogimpl.cpp  qcppdialogimpl.h
debian/: changelog  control  copyright  cutecom.1  cutecom.manpages  menu  rules  watch
debian/patches/: 00list  01-fix_iostream_include.dpatch  02-fix_comparison_warning.dpatch  cutecom-0.22.0-nolinebreak.diff  fix_pathes_for_debian.patch  fixpaths.patch  series
